tdf#33209: Context-sensitive help for extensions in otherwise HTML-help cases

When extensions bring along help content (in the form of .xhp files), that was
completely unavailable in --without-help (i.e., defering to online HTML help)
and --with-help=html (i.e., displaying the new offline HTML help in a browser)
builds.  (Merely extended tooltips brought along by extensions would work in
those builds.)

With this change, at least context-sensitive help (i.e., pressing F1 in an
extension's dialog) will be shown.  Although not integrated with the rest of the
(browser-based HTML) help, but using LO's own old help viewer.  (Which will then
of course only offer the combined help content of all the installed extensions,
not any help content provided by LO itself.  Thus, links from extensions' help
content to LO help content will not work.)

This is only a cheap stopgap.  If an extension brings along help content other
than context-sensitive help (which is reachable by pressing F1 in the respective
context), there is no easy way for the user to reach it.  (That includes help
pages listed in an extension's help.tree, and index entries.  See the commit
message of 4a0ca73c31990568bf20a1c3f0906c3a5770a38e "Add some help content to
test-passive.oxt" for an overview of what help conent an extension can provide.)

Regarding the details of this code change, I left the
comphelper::LibreOfficeKit::isActive() case alone, assuming that that case never
wants to display LO's own old help viewer, for one reason or another.  (But
please correct me/the code if that assumption is wrong.)

Reviewed-on: https://gerrit.libreoffice.org/55816
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>
(cherry picked from commit 06a1c2c9fc467604372495023983874fba33ca85)
Conflicts:
	sfx2/source/appl/sfxhelp.cxx

Change-Id: I2209b1aa48888c5f25674fbe4ce6643eff1268c6
Reviewed-on: https://gerrit.libreoffice.org/55825
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>